Preprocessing, cleaning, scaling, encoding, splitting

--- a/data_clean.ipynb
+++ b/data_clean.ipynb
@@ -98,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Cleaning_Preprocessing.DataCleaning import GetData\n",
+    "from cleanProcess.DataCleaning import GetData\n",
     "pathcsv = \"waitlist_kidney_brazil.csv\"\n",
     "Data = GetData(path=pathcsv)"
    ]
